objects/CRM_EncounterAggHospitalJunction__c.object
<CustomObject>
    <description>This object is used to store selected hospitals on Encounter Aggregates screen</description>
    <fields>
        <fullName>CRM_CampaignLocationEncAggMapping__c</fullName>
        <label>Campaign Location Reference Data</label>
        <referenceTo>CRM_CampaignLocationReferenceData__c</referenceTo>
        <relationshipLabel>EnocunterAggregates Hospital Junction</relationshipLabel>
        <relationshipName>EnocunterAggregates_Hospital_Junction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRM_EnocunterAggregates__c</fullName>
        <label>Encounter aggregates</label>
        <referenceTo>Encounter_aggregates__c</referenceTo>
        <relationshipLabel>EnocunterAggregates Hospital Junction</relationshipLabel>
        <relationshipName>EnocunterAggregates_Hospital_Junction</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRM_Hospital__c</fullName>
        <formula>CRM_CampaignLocationEncAggMapping__r.CRM_Hospital__c</formula>
        <label>Hospital</label>
        <type>Text</type>
    </fields>
    <label>EncounterAggregates Hospital Junction</label>
    <nameField>
        <displayFormat>EAH-{0000}</displayFormat>
        <label>EncounterAggregates Hospital Junction Na</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EnocunterAggregates Hospital Junction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>